# Endstone-Lightweight-satellite-map

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
endstone_bdslm/: __init__.py  config.json  markers.json  plugin.json
include/bdslm/: bdslm_plugin.h  config_manager.h  map_renderer.h  player_tracker.h  tar_extractor.h  unmined_installer.h  web_server.h
src/: bdslm_plugin.cpp  config_manager.cpp  map_renderer.cpp  player_tracker.cpp  tar_extractor.cpp  unmined_installer.cpp  web_server.cpp
