[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "endstone-bdslm"
version = "1.0.0"
description = "BDSLM - Bedrock Server Live Map (卫星地图)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WMX20081122" }
]
keywords = ["endstone", "minecraft", "bedrock", "satellite", "map", "bdslm"]

[project.entry-points."endstone"]
bdslm = "endstone_bdslm:BDSLMPlugin"

[tool.setuptools.packages.find]
include = ["endstone_bdslm*"]
